--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -234,6 +234,7 @@ table.mat-table {
   max-height: 25%;
   margin: 0.5rem 0;
   border-bottom: 1px solid $border-color;
+  padding: 1px;
 
   table.mat-table {
     margin: 0;
