--- a/src/app/views/transactions/transaction-header/transaction-header.component.html
+++ b/src/app/views/transactions/transaction-header/transaction-header.component.html
@@ -84,17 +84,20 @@
         <button *ngIf="showEnableEditor" (click)="toggleReadonly()" type="button" class="btn-action">
           Editar
         </button>
+        <button *ngIf="canPrintControlVoucher" (click)="submitPrintControlVoucher()" type="submit" class="btn-action">
+          Boleta de control
+        </button>
         <button *ngIf="canGeneratePaymentOrder" (click)="submitGeneratePaymentOrder()" type="submit" class="btn-action">
           Generar orden de pago
         </button>
         <button *ngIf="canPrintPaymentOrder" (click)="submitPrintPaymentOrder()" type="submit" class="btn-action">
-          Imprimir orden de pago
+          Orden de pago
         </button>
         <button *ngIf="canCancelPaymentOrder" (click)="submitCancelPaymentOrder()" type="submit" class="btn-warning">
           Cancelar orden de pago
         </button>
         <button *ngIf="canPrintSubmissionReceipt" (click)="submitPrintSubmissionReceipt()" type="submit" class="btn-action">
-          Imprimir boleta de recepción
+          Boleta de recepción
         </button>
       </div>
 
