--- a/src/app/shared/form-controls/date-picker/date-picker.component.html
+++ b/src/app/shared/form-controls/date-picker/date-picker.component.html
@@ -5,6 +5,8 @@
          [disabled]="disabled"
          [matDatepicker]="picker"
          [ngModel]="date"
+         [class.invalid-control]="showError"
+         (blur)="onBlur()"
          (change)="onInputChange(input.value)"
          (dateChange)="onChange(input.value)">
   <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="disabled"></mat-datepicker-toggle>
