Use .card-body-padding css class

--- a/src/app/views/transactions/transaction-creator/transaction-creator.component.html
+++ b/src/app/views/transactions/transaction-creator/transaction-creator.component.html
@@ -3,7 +3,7 @@
   hint='Registrar un nuevo trámite ante el RPP'
   (cardClose)="onClose()">
 
-  <div style="padding: 0 16px 16px 16px !important;">
+  <div class="card-body-padding">
     <emp-land-transaction-header
       [transaction]="transaction"
       [transactionTypeList]="transactionTypeList"
