--- a/src/app/views/transactions/workflow-commander/workflow-commander.component.html
+++ b/src/app/views/transactions/workflow-commander/workflow-commander.component.html
@@ -5,7 +5,7 @@
          '¿Qué debo hacer con el trámite seleccionado?'"
   (cardClose)="onClose()">
 
-  <div style="padding: 0 16px 16px 16px !important;">
+  <div class="card-body-padding">
 
     <emp-land-workflow-command-config
       [applicableCommandsList]="applicableCommandsList"
