--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -75,6 +75,10 @@
   overflow-y: auto;
 }
 
+.card-body-padding {
+  padding: 0 16px 16px 16px !important;
+}
+
 .card-header-raised {
   border-bottom: 4px solid $primary-color;
 
@@ -91,7 +95,8 @@
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
   &:hover {
-    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14), 0 4px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 10px 0 rgba(0, 0, 0, 0.14),
+      0 4px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   }
 }
 
