Feat: bindByValue added to select-box config for allow binding by whole object

--- a/src/app/shared/form-controls/select-box/select-box.component.html
+++ b/src/app/shared/form-controls/select-box/select-box.component.html
@@ -9,7 +9,7 @@
   [addTagText]="selectBoxConfig.addTagText"
   [appendTo]="selectBoxConfig.appendTo"
   [bindLabel]="bindLabel"
-  [bindValue]="bindValue"
+  [bindValue]="selectBoxConfig.bindByValue ? bindValue : null"
   [clearable]="selectBoxConfig.clearable"
   [closeOnSelect]="selectBoxConfig.closeOnSelect"
   [dropdownPosition]="selectBoxConfig.dropdownPosition"
