Fix css for .scrollable-container and css config for table icon

--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -1,8 +1,8 @@
 <div class="section-title">Actos jurídicos contenidos en el documento</div>
 
-<div class="tab-container scrollable-container">
+<div class="tab-container scrollable-container mat-elevation-z1">
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+  <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> # </th>
