--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -179,9 +179,13 @@ table.mat-table {
       color: $icon-color-dark;
     }
 
-    &.padding-icon {
-      padding-top: 4px;
-      padding-bottom: 4px;
+    .mat-icon-disabled {
+      color: $icon-color-light;
+      cursor: auto;
+    }
+
+    .mat-icon-disabled:hover {
+      color: $icon-color-light;
     }
 
     &:first-of-type {
@@ -192,6 +196,18 @@ table.mat-table {
     &.mat-footer-cell:last-of-type {
       padding-right: 10px;
       width: auto;
+    }
+
+    &.column-action {
+      text-align: center;
+      width: 32px !important;
+      padding-top: 4px;
+      padding-bottom: 4px;
+    }
+
+    &.padding-icon {
+      padding-top: 4px;
+      padding-bottom: 4px;
     }
   }
 
@@ -226,18 +242,21 @@ table.mat-table {
     &:hover .mat-cell {
       background: $selected-control-background-color;
     }
+
+    &.selectable-row:hover {
+      cursor: pointer;
+    }
   }
 }
 
 .scrollable-container {
   overflow-y: auto;
   max-height: 25%;
-  margin: 0.5rem 0;
-  border-bottom: 1px solid $border-color;
-  padding: 1px;
 
   table.mat-table {
     margin: 0;
+    width: 100%;
+    max-width: 100%;
   }
 }
 
