--- a/src/app/views/registration/recording-book/recording-book-selector.component.html
+++ b/src/app/views/registration/recording-book/recording-book-selector.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formHandler.form" autocomplete="off" class="form-section" [empNgSpinnerHost]="spinner">
+<form #selectorForm="ngForm" autocomplete="off" class="form-section" [empNgSpinnerHost]="spinner">
 
   <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
@@ -11,8 +11,9 @@
     <div fxLayout="row">
       <div fxFlex="20">
         <label>Distrito:</label>
-        <emp-ng-select [formControlName]="controls.recorderOfficeUID"
-          [config]="{ clearable: false }"
+        <emp-ng-select
+          [(ngModel)]="recorderOfficeSelected" name="recorderOffice"
+          [config]="{ bindByValue: false, clearable: false }"
           [items]="recorderOfficeList"
           (changes)="onRecorderOfficeChange($event)">
         </emp-ng-select>
@@ -20,8 +21,8 @@
 
       <div fxFlex="30">
         <label>Sección:</label>
-        <emp-ng-select [formControlName]="controls.recordingSectionUID"
-          [config]="{ clearable: false }"
+        <emp-ng-select [(ngModel)]="recordingSectionSelected" name="recordingSection"
+          [config]="{ bindByValue: false, clearable: false }"
           [items]="recordingSectionList"
           (changes)="onRecordingSectionChange($event)">
         </emp-ng-select>
@@ -32,11 +33,12 @@
 
         <div fxLayout="row">
 
-          <emp-ng-select fxFlex
-            [formControlName]="controls.recordingBookUID"
-            [config]="{ hideSelected: true,
+          <emp-ng-select fxFlex [(ngModel)]="recordingBookSelected" name="recordingBook"
+            [config]="{ bindByValue: false,
+                        hideSelected: true,
                         minTermLength: recordingBookMinTermLength,
                         dropdownPosition: 'top' }"
+            [disabled]="!isReadyToFilterRecordingBook"
             [items]="recordingBookList$ | async"
             [typeahead]="recordingBookInput$"
             [loading]="recordingBookLoading"
@@ -57,10 +59,11 @@
         <label>Inscripción:</label>
 
         <div fxLayout="row">
-          <emp-ng-select [formControlName]="controls.recordingBookEntryUID" fxFlex
+          <emp-ng-select fxFlex [(ngModel)]="recordingBookEntrySelected" name="recordingBookEntry"
+            [config]="{ bindByValue: false }"
+            [disabled]="!isReadyToFilterRecordingBook"
             [items]="recordingBookEntryList"
-            [placeholder]="recordingBookEntryList.length === 0 ? 'Seleccione' : 'Seleccionar'"
-            (changes)="onRecordingBookEntryChange($event)">
+            [placeholder]="recordingBookEntryList.length === 0 ? 'Seleccione' : 'Seleccionar'">
           </emp-ng-select>
           <button type="button" class="btn" fxFlex="67px" [style.marginTop.px]="2"
             (click)="onRecordingBookEntryClicked()">
