Add config to display recording-book-editor and prepare for book-entry-editor

--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -117,7 +117,9 @@
 
     </div>
 
-    <emp-land-recording-book-selector *ngIf="showSeeker" [showRecordingBookEntryField]="true">
+    <emp-land-recording-book-selector *ngIf="showSeeker"
+      [showRecordingBookEntryField]="true"
+      (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
 
     </emp-land-recording-book-selector>
 
