--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -4,7 +4,7 @@
 
   <div class="primary"
        [fxHide]="displayFileViewer"
-       [fxHide.lt-lg]="displayTransactionTabbedView || displayFileViewer || displayRecordingActEditor">
+       [fxHide.lt-lg]="displayTransactionTabbedView || displayFileViewer || secondaryEditorDisplayed">
 
     <emp-land-transaction-list
         [transactionList]="transactionList"
@@ -20,7 +20,7 @@
 
   <div *ngIf="displayFileViewer"
     class="primary-resizable"
-    [fxHide.lt-lg]="displayRecordingActEditor"
+    [fxHide.lt-lg]="secondaryEditorDisplayed"
     [ngClass.lt-lg]="'primary-resizable-disable'"
     empNgResizable>
 
@@ -35,8 +35,8 @@
 
   <div *ngIf="displayTransactionTabbedView"
     class="secondary"
-    [fxHide]="displayRecordingActEditor"
-    [fxHide.lt-lg]="displayRecordingActEditor || displayFileViewer" >
+    [fxHide]="secondaryEditorDisplayed"
+    [fxHide.lt-lg]="secondaryEditorDisplayed || displayFileViewer" >
 
     <emp-land-transaction-tabbed-view
         [transaction]="selectedTransaction"
@@ -47,13 +47,31 @@
 
 
   <div *ngIf="displayRecordingActEditor"
-    class="secondary">
+    class="secondary"
+    [fxHide]="displayBookEntryEditor">
 
     <emp-land-recordable-subject-tabbed-view
       [recordingAct]="selectedRecordingAct"
-      (closeEvent)="onCloseRecordingActEditor()">
+      (closeEvent)="onCloseSecondaryEditor()">
 
     </emp-land-recordable-subject-tabbed-view>
+
+  </div>
+
+  <div *ngIf="displayRecordingBookEditor"
+    class="secondary"
+    [fxHide]="displayBookEntryEditor">
+
+    <emp-land-recording-book-editor
+      [recordingBook]="selectedRecordingBook"
+      (closeEvent)="onCloseSecondaryEditor()">
+
+    </emp-land-recording-book-editor>
+
+  </div>
+
+  <div *ngIf="displayBookEntryEditor" class="secondary">
+
 
   </div>
 
