--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -4,7 +4,7 @@
 
     <ng-container matColumnDef="bookEntry">
       <th mat-header-cell *matHeaderCellDef> Inscripción </th>
-      <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.recordingNo }} </td>
     </ng-container>
     <ng-container matColumnDef="instrument">
       <th mat-header-cell *matHeaderCellDef> Instrumento </th>
