Update recordable subject data service/handler added

--- a/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
+++ b/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
@@ -145,7 +145,7 @@
           Editar
         </button>
 
-        <button *ngIf="editorMode" (click)="submitRecordingAct()" [class.btn]="!formHandler.isValid"
+        <button *ngIf="editorMode" (click)="submitForm()" [class.btn]="!formHandler.isValid"
           [class.btn-action]="formHandler.isValid">
           Guardar
         </button>
