Registration commands were extended with rules

--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -39,8 +39,8 @@
         <label>Sobre:</label>
         <emp-ng-select [formControlName]="controls.subjectCommand"
           [config]="{ clearable: false }"
-          [items]="subjectCommandList"
-          [placeholder]="subjectCommandList.length === 0 ? 'Seleccione el acto jurídico a registrar' : 'Seleccione'"
+          [items]="registrationCommands"
+          [placeholder]="registrationCommands.length === 0 ? 'Seleccione el acto jurídico a registrar' : 'Seleccione'"
           [showError]="formHandler.showInvalidControl(controls.subjectCommand)"
           (changes)="onSubjectCommandChange()">
         </emp-ng-select>
