Set instrumentRecording input to real-estate-editor and validate values

--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -51,7 +51,8 @@
     [fxHide]="displayBookEntryEditor">
 
     <emp-land-recordable-subject-tabbed-view
-      [recordingAct]="selectedRecordingAct"
+      [instrumentRecording]="selectedRecordingAct.instrumentRecording"
+      [recordingAct]="selectedRecordingAct.recordingAct"
       (closeEvent)="onCloseSecondaryEditor()">
 
     </emp-land-recordable-subject-tabbed-view>
