Rename some form fields

--- a/src/app/views/registration/recording-book/book-entry-header.component.html
+++ b/src/app/views/registration/recording-book/book-entry-header.component.html
@@ -25,8 +25,8 @@
       <div fxFlex fxLayoutAlign="end">
         <div fxFlex="140px">
           <label>Número de la inscripción:</label>
-          <input [formControlName]="controls.volumeNo" type="text" class="text-box"
-            [class.invalid-control]="formHandler.showInvalidControl(controls.volumeNo)">
+          <input [formControlName]="controls.recordingNo" type="text" class="text-box"
+            [class.invalid-control]="formHandler.showInvalidControl(controls.recordingNo)">
         </div>
       </div>
     </div>
