--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -2,13 +2,13 @@
 
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="bookEntry">
+    <ng-container matColumnDef="recordingNo">
       <th mat-header-cell *matHeaderCellDef> Inscripción </th>
       <td mat-cell *matCellDef="let row"> {{ row.recordingNo }} </td>
     </ng-container>
-    <ng-container matColumnDef="instrument">
+    <ng-container matColumnDef="instrumentName">
       <th mat-header-cell *matHeaderCellDef> Instrumento </th>
-      <td mat-cell *matCellDef="let row"> {{ row.instrument }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.instrumentName }} </td>
     </ng-container>
     <ng-container matColumnDef="recordingTime">
       <th mat-header-cell *matHeaderCellDef> Fecha de registro </th>
