--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -14,7 +14,7 @@
     </ng-container>
     <ng-container matColumnDef="electronicID">
       <th mat-header-cell *matHeaderCellDef> Folio electrónico </th>
-      <td mat-cell *matCellDef="let row">
+      <td mat-cell *matCellDef="let row" [style.width.px]="170">
         <a class="link" (click)="onOpenRecordingActEditor(row)">
           {{ row.recordableSubject.electronicID }}
         </a>
@@ -31,7 +31,7 @@
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
+      <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon
           (click)="removeRecordingAct(row)"
           title="Remover este acto">
