--- a/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
@@ -11,7 +11,7 @@
       <emp-land-real-estate-editor *ngIf="isRealEstate"
         [instrumentRecording]="instrumentRecording"
         [recordingAct]="recordingAct"
-        [realEstate]="getRealEstate()"
+        [realEstate]="realEstate"
         [readonly]="false">
       </emp-land-real-estate-editor>
 
