--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -3,7 +3,7 @@
   <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
   <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
-    <div class="section-title">Documento a inscribir</div>
+    <div class="section-title" *ngIf="title">{{ title }}</div>
 
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex>
