--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -1,4 +1,4 @@
-<div class="section-title">Actos jurídicos contenidos en el documento</div>
+<div class="section-title" *ngIf="title"> {{ title }} </div>
 
 <div class="tab-container scrollable-container mat-elevation-z1">
 
@@ -20,6 +20,15 @@
         </a>
       </td>
     </ng-container>
+    <ng-container matColumnDef="actionCopy">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let row" class="column-action">
+        <mat-icon title="Copiar folio electrónico" [cdkCopyToClipboard]="row.recordableSubject.electronicID"
+          matRipple [matRippleCentered]="true" [matRippleUnbounded]="true" (click)="showAlertTextCopied()">
+          bookmark
+        </mat-icon>
+      </td>
+    </ng-container>
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Tipo </th>
       <td mat-cell *matCellDef="let row"> {{ row.recordableSubject.kind }} </td>
@@ -28,8 +37,12 @@
       <th mat-header-cell *matHeaderCellDef> Antecedente </th>
       <td mat-cell *matCellDef="let row"> {{ row.antecedent }} </td>
     </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Estado </th>
+      <td mat-cell *matCellDef="let row"> {{ row.recordableSubject.status }} </td>
+    </ng-container>
 
-    <ng-container matColumnDef="action">
+    <ng-container matColumnDef="actionDelete">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon
