Rfx recording-book and book-entry dispatched from recording-book-selector

--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -142,8 +142,7 @@
     </div>
 
     <emp-land-recording-book-selector *ngIf="showSeeker"
-      [showRecordingBookEntryField]="true"
-      (recordingBookSelectorEvent)="onRecordingBookSelectorEvent($event)">
+      [showRecordingBookEntryField]="true">
 
     </emp-land-recording-book-selector>
 
