Rfx book-entry-header component removed and use instrument-editor

--- a/src/app/views/registration/recording-book/book-entry-list.component.html
+++ b/src/app/views/registration/recording-book/book-entry-list.component.html
@@ -8,7 +8,7 @@
     </ng-container>
     <ng-container matColumnDef="instrumentName">
       <th mat-header-cell *matHeaderCellDef> Instrumento </th>
-      <td mat-cell *matCellDef="let row"> {{ row.instrumentName }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.instrumentRecording.asText }} </td>
     </ng-container>
     <ng-container matColumnDef="recordingTime">
       <th mat-header-cell *matHeaderCellDef> Fecha de registro </th>
@@ -22,7 +22,6 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row; let i = index" class="column-action">
-        <!-- *ngIf="row.status === 'Abierto'" [ngClass]="{'mat-icon-disabled': !row.canEdit}" -->
         <mat-icon
           (click)="removeBookEntry(row); $event.stopPropagation();" title="Eliminar inscripción">
           delete
