Add book-entry-editor component

--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -73,6 +73,11 @@
 
   <div *ngIf="displayBookEntryEditor" class="secondary">
 
+    <emp-land-book-entry-editor
+      [bookEntry]="selectedBookEntry"
+      (closeEvent)="unselectCurrentBookEntry()">
+
+    </emp-land-book-entry-editor>
 
   </div>
 
