--- a/src/app/views/registration/recording-book/book-entry-editor.component.html
+++ b/src/app/views/registration/recording-book/book-entry-editor.component.html
@@ -5,6 +5,7 @@
     <emp-land-instrument-editor
       title="Instrumento"
       [instrument]="instrumentRecording.instrument"
+      [showStatusField]="true"
       (instrumentEditorEvent)="onInstrumentEditorEvent($event)">
 
     </emp-land-instrument-editor>
