--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" autocomplete="off" class="form-section" [empNgSpinnerHost]="spinner">
+<form [formGroup]="formHandler.form" autocomplete="off" class="form-section" [empNgSpinnerHost]="spinner">
 
   <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
@@ -8,13 +8,13 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div [fxFlex]="100/3">
         <label>Tipo de instrumento:</label>
-        <emp-ng-select formControlName="type"
+        <emp-ng-select [formControlName]="controls.type"
           [config]="{ clearable: false }"
           [bindLabel]="'typeName'"
           [bindValue]="'type'"
           [items]="instrumentTypesList"
-          [showError]="getFormControl('type').touched && getFormControl('type').invalid"
-          (changes)="instrumentTypeChange($event)">
+          [showError]="formHandler.showInvalidControl(controls.type)"
+          (changes)="onInstrumentTypeChange($event)">
         </emp-ng-select>
 
       </div>
@@ -22,15 +22,15 @@
       <div [fxFlex]="100/3">
         <ng-container *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
           <label>Fecha:</label>
-          <emp-ng-datepicker formControlName="issueDate">
+          <emp-ng-datepicker [formControlName]="controls.issueDate">
 
           </emp-ng-datepicker>
         </ng-container>
 
         <ng-container *ngIf="validateTypeSelected([InstrumentType.Resumen])">
           <label>Fecha de registro:</label>
-          <emp-ng-datepicker formControlName="recordingTime"
-            [showError]="getFormControl('recordingTime').touched && getFormControl('recordingTime').invalid">
+          <emp-ng-datepicker [formControlName]="controls.recordingTime"
+            [showError]="formHandler.showInvalidControl(controls.recordingTime)">
 
           </emp-ng-datepicker>
         </ng-container>
@@ -41,37 +41,35 @@
 
           <ng-container *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
             <label>Número de hojas:</label>
-            <input formControlName="sheetsCount"
+            <input [formControlName]="controls.sheetsCount"
               type="number"
               class="text-box"
-              [class.invalid-control]="getFormControl('sheetsCount').touched &&
-                getFormControl('sheetsCount').invalid">
+              [class.invalid-control]="formHandler.showInvalidControl(controls.sheetsCount)">
           </ng-container>
 
           <ng-container *ngIf="validateTypeSelected([InstrumentType.Resumen])">
             <label>Número de la inscripcion a agregar:</label>
-            <input formControlName="recordingNo"
+            <input [formControlName]="controls.recordingNo"
               type="text"
               class="text-box"
               style="width: 100px;"
-              [class.invalid-control]="getFormControl('recordingNo').touched &&
-                getFormControl('recordingNo').invalid">
+              [class.invalid-control]="formHandler.showInvalidControl(controls.recordingNo)">
           </ng-container>
 
         </div>
       </div>
     </div>
 
-    <ng-container *ngIf="getFormControl('type').value">
+    <ng-container *ngIf="typeSelected">
       <div fxLayout="row" fxLayout.lt-md="column" *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
         <div fxFlex="100">
-          <ng-container [ngSwitch]="getFormControl('type').value">
+          <ng-container [ngSwitch]="typeSelected">
             <label *ngSwitchCase="InstrumentType.DocumentoJuzgado">Autoridad:</label>
             <label *ngSwitchCase="InstrumentType.DocumentoTerceros">Expedido por:</label>
             <label *ngSwitchCase="InstrumentType.TituloPropiedad">Expedido por C.:</label>
             <label *ngSwitchDefault>Notaría:</label>
           </ng-container>
-          <emp-ng-select formControlName="issuer"
+          <emp-ng-select [formControlName]="controls.issuer"
             [config]="{ hideSelected: true, minTermLength: issuerMinTermLength }"
             [items]="issuerList$ | async"
             [typeahead]="issuerInput$"
@@ -139,22 +137,22 @@
                                        InstrumentType.DocumentoTerceros,
                                        InstrumentType.Resumen])">
 
-          <ng-container [ngSwitch]="getFormControl('type').value">
+          <ng-container [ngSwitch]="typeSelected">
             <label *ngSwitchCase="InstrumentType.DocumentoTerceros">Tipo de documento:</label>
             <label *ngSwitchCase="InstrumentType.Resumen">Tipo de documento:</label>
             <label *ngSwitchDefault>Tipo de oficio:</label>
           </ng-container>
 
-          <emp-ng-select formControlName="kind"
+          <emp-ng-select [formControlName]="controls.kind"
             [bindValue]="'name'"
             [items]="instrumentKindsList"
-            [showError]="getFormControl('kind').touched && getFormControl('kind').invalid">
+            [showError]="formHandler.showInvalidControl(controls.kind)">
           </emp-ng-select>
         </div>
 
         <div [fxFlex]="100/3" fxFlex.lt-md="100" *ngIf="!validateTypeSelected([InstrumentType.Resumen])">
 
-          <ng-container [ngSwitch]="getFormControl('type').value">
+          <ng-container [ngSwitch]="typeSelected">
             <label *ngSwitchCase="InstrumentType.EscrituraPublica">Escritura:</label>
             <label *ngSwitchCase="InstrumentType.OficioNotaria">No. Oficio:</label>
             <label *ngSwitchCase="InstrumentType.DocumentoJuzgado">Oficio:</label>
@@ -162,7 +160,7 @@
             <label *ngSwitchCase="InstrumentType.TituloPropiedad">Título de propiedad No.:</label>
           </ng-container>
 
-          <input formControlName="instrumentNo"
+          <input [formControlName]="controls.instrumentNo"
             type="text"
             class="text-box uppercase">
         </div>
@@ -170,11 +168,11 @@
         <div [fxFlex]="100/3" fxFlex.lt-md="100"
           *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica,
                                        InstrumentType.DocumentoJuzgado])">
-          <ng-container [ngSwitch]="getFormControl('type').value">
+          <ng-container [ngSwitch]="typeSelected">
             <label *ngSwitchCase="InstrumentType.EscrituraPublica">Volumen / libro:</label>
             <label *ngSwitchDefault>Expediente:</label>
           </ng-container>
-          <input formControlName="binderNo"
+          <input [formControlName]="controls.binderNo"
             type="text"
             class="text-box uppercase">
         </div>
@@ -183,7 +181,7 @@
           *ngIf="validateTypeSelected([InstrumentType.EscrituraPublica])">
           <div fxFlex="100px">
             <label>Folio del:</label>
-            <input formControlName="folio"
+            <input [formControlName]="controls.folio"
               type="text"
               class="text-box uppercase"
               style="width: 90px;">
@@ -191,7 +189,7 @@
 
             <div fxFlex="100px">
               <label>al:</label>
-              <input formControlName="endFolio"
+              <input [formControlName]="controls.endFolio"
                 type="text"
                 class="text-box uppercase"
                 style="width: 90px;">
@@ -201,7 +199,7 @@
         <div [fxFlex]="100/3" fxFlex.lt-md="100"
           *ngIf="validateTypeSelected([InstrumentType.TituloPropiedad])">
             <label>Folio:</label>
-            <input formControlName="folio"
+            <input [formControlName]="controls.folio"
               type="text"
               class="text-box uppercase">
         </div>
@@ -211,7 +209,7 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex>
         <label>Descripción:</label>
-        <emp-ng-text-editor formControlName="summary">
+        <emp-ng-text-editor [formControlName]="controls.summary">
         </emp-ng-text-editor>
       </div>
     </div>
@@ -233,10 +231,10 @@
           <span style="padding-right: 0.5rem;">Marcar la inscripción como:</span>
 
           <emp-ng-select
-            formControlName="status"
+            [formControlName]="controls.status"
             [config]="{ clearable: false }"
             [items]="statusList"
-            [showError]="getFormControl('status').touched && getFormControl('status').invalid">
+            [showError]="formHandler.showInvalidControl(controls.status)">
           </emp-ng-select>
 
       </div>
@@ -245,8 +243,8 @@
 
         <button *ngIf="editionMode && ( actions.can.editInstrument || addMode )"
           (click)="submit()"
-          [class.btn]="!isReadyForSubmit"
-          [class.btn-action]="isReadyForSubmit">
+          [class.btn]="!formHandler.isValid"
+          [class.btn-action]="formHandler.isValid">
           {{ submitButtonText }}
         </button>
 
