Add input properties to no-property-editor and the status field

--- a/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
+++ b/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
@@ -22,13 +22,19 @@
 
       <div fxFlex="290px">
         <label>Tipo:</label>
-        <emp-ng-select [formControlName]="controls.resourceKindUID" [config]="{ clearable: false }" [bindValue]="'name'"
-          [items]="typeList" [showError]="formHandler.showInvalidControl(controls.resourceKindUID)">
+        <emp-ng-select
+          [formControlName]="controls.kind"
+          [config]="{ clearable: false }"
+          [bindValue]="'name'"
+          [items]="kindsList"
+          [showError]="formHandler.showInvalidControl(controls.kind)">
         </emp-ng-select>
       </div>
 
       <div fxFlex="100">
-        <label>Nombre o denominación:</label>
+        <label *ngIf="isAssociation">Nombre o denominación:</label>
+        <label *ngIf="!isAssociation">Descripción opcional de lo que se inscribe:</label>
+
         <textarea class="text-area" empNgTextareaAutoresize rows="1" [formControlName]="controls.description"
           [class.invalid-control]="formHandler.showInvalidControl(controls.description)">
 
@@ -42,7 +48,7 @@
 
       <div fxFlex fxLayoutAlign="start center">
 
-        <button *ngIf="editorMode" (click)="enableEditor(false)" class="btn-warning">
+        <button *ngIf="editionMode" (click)="enableEditor(false)" class="btn-warning">
           Cancelar edición
         </button>
 
@@ -50,19 +56,32 @@
 
       <div fxFlex fxLayoutAlign="center center">
 
-        <mat-checkbox *ngIf="editorMode" [formControlName]="controls.completed" (change)="onCompletedChange($event)">
-          Marcar como completo
-        </mat-checkbox>
+        <ng-container *ngIf="editionMode && !readonly">
+
+          <span style="padding-right: 0.5rem;">Marcar el predio como:</span>
+
+          <emp-ng-select
+            [formControlName]="controls.status"
+            bindLabel="statusName"
+            bindValue="status"
+            [config]="{ clearable: false }"
+            [items]="statusList"
+            [showError]="formHandler.showInvalidControl(controls.status)"
+            (changes)="onStatusChange($event)"
+            [style.width.px]="125">
+          </emp-ng-select>
+
+        </ng-container>
 
       </div>
 
       <div fxFlex fxLayoutAlign="end center">
 
-        <button *ngIf="!readonly && !editorMode" (click)="enableEditor(true)" class="btn-action">
+        <button *ngIf="!readonly && !editionMode" (click)="enableEditor(true)" class="btn-action">
           Editar
         </button>
 
-        <button *ngIf="editorMode" (click)="submitRecordingAct()" [class.btn]="!formHandler.isValid"
+        <button *ngIf="editionMode" (click)="submitForm()" [class.btn]="!formHandler.isValid"
           [class.btn-action]="formHandler.isValid">
           Guardar
         </button>
