--- a/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
@@ -16,6 +16,8 @@
       </emp-land-real-estate-editor>
 
       <emp-land-no-property-editor *ngIf="isAssociation || isNoProperty"
+        [instrumentRecording]="instrumentRecording"
+        [recordingAct]="recordingAct"
         [recordableSubject]="recordingAct.recordableSubject"
         [isAssociation]="isAssociation"
         [readonly]="false">
