Rfx Rename fields and validations for real-estate-editor

--- a/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
+++ b/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
@@ -67,11 +67,11 @@
 
       <div fxFlex="290px">
         <label>Tipo de predio:</label>
-        <emp-ng-select [formControlName]="controls.resourceKindUID"
+        <emp-ng-select [formControlName]="controls.kind"
           [config]="{ clearable: false }"
           [bindValue]="'name'"
-          [items]="realEstateTypeList"
-          [showError]="formHandler.showInvalidControl(controls.resourceKindUID)">
+          [items]="realEstateKindList"
+          [showError]="formHandler.showInvalidControl(controls.kind)">
         </emp-ng-select>
       </div>
 
